tests/dupe-ty-var-fun/out.txt
error: duplicate type variable: 'a
  ┌─ err.sml:1:10
  │
1 │ fun ('a, 'a) f (x: 'a) = 3
  │          ^^

typechecking failed
